pushed everything lol

--- a/MultiOutputReg.ipynb
+++ b/MultiOutputReg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "for s in states:\n",
     "    statesdata[s] = train.loc[train['Province_State'] == s,features]\n",
     "\n",
-    "WINDOW_SIZE = 5\n",
+    "WINDOW_SIZE = 9\n",
     "#WINDOW_SIZE = 5\n",
     "state_feature_indices = utils.get_column_indices(statesdata['California'],features)\n",
     "\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +100,16 @@
     "from sklearn.ensemble import StackingRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.neural_network import MLPRegressor\n",
+    "\n",
+    "\n",
     "#from sklearn.ensemble import StackingRegressor\n",
     "#estimators = [('ridge', Ridge(random_state = 123)), ('lasso', LassoCV(random_state=445)), \n",
     "              #('svr', SVR(kernel='linear',C=1, gamma=1e-6))]\n",
-    "#reg = MultiOutputRegressor(estimator=Ridge(alpha=1.3242529, tol = 0.00125, random_state=123))\n",
+    "#reg = MultiOutputRegressor(estimator=MLPRegressor(alpha=100,max_iter=1200,hidden_layer_sizes=(50,50,50,),verbose=True))\n",
     "#reg = MultiOutputRegressor(estimator=ElasticNet(max_iter=2000, l1_ratio=0.1))\n",
-    "reg = MultiOutputRegressor(estimator=BayesianRidge(alpha_1=1.5, alpha_2=1e-2, lambda_1=1.5, lambda_2 = 1e-2))\n",
+    "#reg = MultiOutputRegressor(estimator=BayesianRidge(alpha_1=1.5, alpha_2=1e-2, lambda_1=1.5, lambda_2 = 1e-2))\n",
     "#reg = MultiOutputRegressor(estimator=BaggingRegressor(Ridge(alpha = 100)))\n",
+    "reg = MultiOutputRegressor(estimator=Ridge(alpha=0.286109713976066, max_iter=3693, tol=0.014557779654411728, random_state=362340))\n",
     "\n",
     "#from sklearn.svm import LinearSVR\n",
     "#reg = MultiOutputRegressor(estimator=LinearSVR(max_iter=2000))\n",
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1373,13 +1376,7 @@
       "Montana day 11\n",
       "575\n",
       "Nebraska day 11\n",
-      "576\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "576\n",
       "Nevada day 11\n",
       "577\n",
       "New Hampshire day 11\n",
@@ -1481,7 +1478,13 @@
       "Nebraska day 12\n",
       "626\n",
       "Nevada day 12\n",
-      "627\n",
+      "627\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "New Hampshire day 12\n",
       "628\n",
       "New Jersey day 12\n",
@@ -2378,13 +2381,7 @@
       "1074\n",
       "Montana day 21\n",
       "1075\n",
-      "Nebraska day 21\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Nebraska day 21\n",
       "1076\n",
       "Nevada day 21\n",
       "1077\n",
@@ -2612,7 +2609,13 @@
       "1188\n",
       "South Carolina day 23\n",
       "1189\n",
-      "South Dakota day 23\n",
+      "South Dakota day 23\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1190\n",
       "Tennessee day 23\n",
       "1191\n",
@@ -2857,7 +2860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2867,7 +2870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2875,17 +2878,17 @@
      "output_type": "stream",
      "text": [
       "      ForecastID  Confirmed  Deaths\n",
-      "0              0     127356    2192\n",
-      "1              1       5330      37\n",
-      "2              2     202210    5065\n",
-      "3              3      61785     810\n",
-      "4              4     718540   13172\n",
+      "0              0     127430    2200\n",
+      "1              1       5304      37\n",
+      "2              2     202444    5053\n",
+      "3              3      61854     810\n",
+      "4              4     719279   13159\n",
       "...          ...        ...     ...\n",
-      "1295        1295     147504    2867\n",
-      "1296        1296      90407    2180\n",
-      "1297        1297      14833     271\n",
-      "1298        1298      97937    1285\n",
-      "1299        1299       5064      37\n",
+      "1295        1295     148191    2958\n",
+      "1296        1296      84463    2151\n",
+      "1297        1297      15158     268\n",
+      "1298        1298      93671    1228\n",
+      "1299        1299       5079      36\n",
       "\n",
       "[1300 rows x 3 columns]\n"
      ]
@@ -2898,16 +2901,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#submission.to_csv(\"team31-dec1-test1.csv\", index=False, header=True)"
+    "submission.to_csv(\"team31-dec1-2.csv\", index=False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2916,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3899,7 +3902,7 @@
        "7148        1.475504  21731.822121                   NaN  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3916,7 +3919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3936,7 +3939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3945,7 +3948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3957,7 +3960,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3968,33 +3971,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "index        48.835117\n",
-       "Confirmed     0.106834\n",
-       "Deaths        0.234635\n",
+       "Confirmed     0.111295\n",
+       "Deaths        0.216068\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MAPE(test[['Confirmed', 'Deaths']], validation[['Confirmed', 'Deaths']])*len(test)"
+    "MAPE(submission[['Confirmed', 'Deaths']], validation[['Confirmed', 'Deaths']])*len(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ForecastID</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>127430</td>\n",
+       "      <td>2200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5304</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>202444</td>\n",
+       "      <td>5053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>61854</td>\n",
+       "      <td>810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>719279</td>\n",
+       "      <td>13159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1295</th>\n",
+       "      <td>1295</td>\n",
+       "      <td>148191</td>\n",
+       "      <td>2958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>1296</td>\n",
+       "      <td>84463</td>\n",
+       "      <td>2151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1297</th>\n",
+       "      <td>1297</td>\n",
+       "      <td>15158</td>\n",
+       "      <td>268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>1298</td>\n",
+       "      <td>93671</td>\n",
+       "      <td>1228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1299</th>\n",
+       "      <td>1299</td>\n",
+       "      <td>5079</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1300 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ForecastID  Confirmed  Deaths\n",
+       "0              0     127430    2200\n",
+       "1              1       5304      37\n",
+       "2              2     202444    5053\n",
+       "3              3      61854     810\n",
+       "4              4     719279   13159\n",
+       "...          ...        ...     ...\n",
+       "1295        1295     148191    2958\n",
+       "1296        1296      84463    2151\n",
+       "1297        1297      15158     268\n",
+       "1298        1298      93671    1228\n",
+       "1299        1299       5079      36\n",
+       "\n",
+       "[1300 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission"
+   ]
   }
  ],
  "metadata": {
@@ -4013,7 +4138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
