--- a/MultiOutputReg_Separate.ipynb
+++ b/MultiOutputReg_Separate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "#only look at the features in features list\n",
-    "features = ['Confirmed','Deaths']\n",
+    "features = ['Confirmed','Incident_Rate']\n",
     "num_features = len(features)\n",
     "\n",
     "#stratify by state (into state dictionary)\n",
@@ -51,8 +51,7 @@
     "for s in states:\n",
     "    statesdata[s] = train.loc[train['Province_State'] == s,features]\n",
     "\n",
-    "WINDOW_SIZE = 5\n",
-    "#WINDOW_SIZE = 5\n",
+    "WINDOW_SIZE = 4\n",
     "state_feature_indices = utils.get_column_indices(statesdata['California'],features)\n",
     "\n",
     "#append the feature spaces from the W days prior (where W is the window length)\n",
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,11 +104,10 @@
     "#from sklearn.ensemble import StackingRegressor\n",
     "#estimators = [('ridge', Ridge(random_state = 123)), ('lasso', LassoCV(random_state=445)), \n",
     "              #('svr', SVR(kernel='linear',C=1, gamma=1e-6))]\n",
-    "#reg = MultiOutputRegressor(estimator=MLPRegressor(alpha=100,max_iter=1200,hidden_layer_sizes=(50,50,50,),verbose=True))\n",
+    "reg = MultiOutputRegressor(estimator=Ridge(alpha=100,max_iter=10000,tol=0.0005))\n",
     "#reg = MultiOutputRegressor(estimator=ElasticNet(max_iter=2000, l1_ratio=0.1))\n",
     "#reg = MultiOutputRegressor(estimator=BayesianRidge(alpha_1=1.5, alpha_2=1e-2, lambda_1=1.5, lambda_2 = 1e-2))\n",
     "#reg = MultiOutputRegressor(estimator=BaggingRegressor(Ridge(alpha = 100)))\n",
-    "reg = MultiOutputRegressor(estimator=Ridge(alpha=100,max_iter=1200))\n",
     "\n",
     "#from sklearn.svm import LinearSVR\n",
     "#reg = MultiOutputRegressor(estimator=LinearSVR(max_iter=2000))\n",
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,22 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Tomer\\anaconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:582: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\Tomer\\anaconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:582: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\Tomer\\anaconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:582: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "proj = {}\n",
     "\n",
@@ -196,8 +181,8 @@
     "    for d in range(days_to_predict):\n",
     "        #x = knndata.drop(columns=features)\n",
     "        #y = knndata.drop(columns=features)\n",
-    "        x = knndata.drop(['Confirmed', 'Deaths'], axis = 1)\n",
-    "        y = knndata[['Confirmed', 'Deaths']]\n",
+    "        x = knndata.drop(['Confirmed', 'Incident_Rate'], axis = 1)\n",
+    "        y = knndata[['Confirmed', 'Incident_Rate']]\n",
     "        toguess = 1\n",
     "        trainx = x.head(len(x))\n",
     "        trainy = y.head(len(y))\n",
@@ -222,14 +207,14 @@
     "        #if d == 0: \n",
     "            #print(knndata)\n",
     "    done = knndata.tail(days_to_predict)\n",
-    "    done = done[['Confirmed', 'Deaths']]\n",
+    "    done = done[['Confirmed', 'Incident_Rate']]\n",
     "    #print(done)\n",
     "    proj[s] = done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1353,13 +1338,7 @@
       "Delaware day 11\n",
       "557\n",
       "Florida day 11\n",
-      "558\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "558\n",
       "Georgia day 11\n",
       "559\n",
       "Hawaii day 11\n",
@@ -1469,7 +1448,13 @@
       "Illinois day 12\n",
       "612\n",
       "Indiana day 12\n",
-      "613\n",
+      "613\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Iowa day 12\n",
       "614\n",
       "Kansas day 12\n",
@@ -2353,13 +2338,7 @@
       "California day 21\n",
       "1054\n",
       "Colorado day 21\n",
-      "1055\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1055\n",
       "Connecticut day 21\n",
       "1056\n",
       "Delaware day 21\n",
@@ -2549,7 +2528,13 @@
       "Wyoming day 22\n",
       "1149\n",
       "Alabama day 23\n",
-      "1150\n",
+      "1150\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Alaska day 23\n",
       "1151\n",
       "Arizona day 23\n",
@@ -2857,14 +2842,14 @@
     "\n",
     "# format submission\n",
     "conf = []\n",
-    "dead = []\n",
+    "ir = []\n",
     "fid = 0\n",
     "for i in range(days_to_predict):\n",
     "    for j in order:\n",
     "        projection = proj[j].iloc[i]\n",
     "        print(j, 'day', i)\n",
     "        conf.append(int(projection['Confirmed']))\n",
-    "        dead.append(int(projection['Deaths']))\n",
+    "        ir.append(int(projection['Incident_Rate']))\n",
     "        print(fid)\n",
     "        fid+=1\n",
     "    \n",
@@ -2873,37 +2858,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "test['Confirmed'] = conf\n",
-    "test['Deaths'] = dead"
+    "test['Incident_Rate'] = ir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      ForecastID  Confirmed  Deaths\n",
-      "0              0     146566    2061\n",
-      "1              1       5895     287\n",
-      "2              2     229254    9102\n",
-      "3              3      70475    2034\n",
-      "4              4     820725   10683\n",
-      "...          ...        ...     ...\n",
-      "1295        1295    1273460   18529\n",
-      "1296        1296     673368    9501\n",
-      "1297        1297     184991    4817\n",
-      "1298        1298     864343   83370\n",
-      "1299        1299      41092    2901\n",
+      "      ForecastID  Confirmed  Deaths  Incident_Rate\n",
+      "0              0     127350      -1           2597\n",
+      "1              1       5318      -1            727\n",
+      "2              2     202197      -1           2777\n",
+      "3              3      61792      -1           2047\n",
+      "4              4     718534      -1           1818\n",
+      "...          ...        ...     ...            ...\n",
+      "1295        1295     145989      -1           1698\n",
+      "1296        1296      94794      -1           1243\n",
+      "1297        1297      14881      -1            814\n",
+      "1298        1298      99358      -1           1693\n",
+      "1299        1299       5139      -1            874\n",
       "\n",
-      "[1300 rows x 3 columns]\n"
+      "[1300 rows x 4 columns]\n"
      ]
     }
    ],
@@ -2914,7 +2899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2923,7 +2908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2932,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3915,7 +3900,7 @@
        "7148        1.475504  21731.822121                   NaN  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3932,7 +3917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3952,7 +3937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3961,53 +3946,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MAPE(bestsub[['Confirmed', 'Incident_Rate']], validation[['Confirmed', 'Incident_Rate']])*len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "index        48.835117\n",
-       "Confirmed     0.104128\n",
-       "Deaths        0.231776\n",
+       "index            0.037565\n",
+       "Confirmed        0.000081\n",
+       "Incident_Rate    0.000092\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MAPE(bestsub[['Confirmed', 'Deaths']], validation[['Confirmed', 'Deaths']])*len(test)"
+    "MAPE(submission[['Confirmed', 'Incident_Rate']], validation[['Confirmed', 'Incident_Rate']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "index        48.835117\n",
-       "Confirmed     6.837408\n",
-       "Deaths       47.503691\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MAPE(submission[['Confirmed', 'Deaths']], validation[['Confirmed', 'Deaths']])*len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -4034,41 +4005,48 @@
        "      <th>ForecastID</th>\n",
        "      <th>Confirmed</th>\n",
        "      <th>Deaths</th>\n",
+       "      <th>Incident_Rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>146566</td>\n",
-       "      <td>2061</td>\n",
+       "      <td>127350</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>5895</td>\n",
-       "      <td>287</td>\n",
+       "      <td>5318</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>229254</td>\n",
-       "      <td>9102</td>\n",
+       "      <td>202197</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2777</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>70475</td>\n",
-       "      <td>2034</td>\n",
+       "      <td>61792</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>820725</td>\n",
-       "      <td>10683</td>\n",
+       "      <td>718534</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -4076,56 +4054,61 @@
        "    <tr>\n",
        "      <th>1295</th>\n",
        "      <td>1295</td>\n",
-       "      <td>1273460</td>\n",
-       "      <td>18529</td>\n",
+       "      <td>145989</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1296</th>\n",
        "      <td>1296</td>\n",
-       "      <td>673368</td>\n",
-       "      <td>9501</td>\n",
+       "      <td>94794</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1297</th>\n",
        "      <td>1297</td>\n",
-       "      <td>184991</td>\n",
-       "      <td>4817</td>\n",
+       "      <td>14881</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1298</th>\n",
        "      <td>1298</td>\n",
-       "      <td>864343</td>\n",
-       "      <td>83370</td>\n",
+       "      <td>99358</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1299</th>\n",
        "      <td>1299</td>\n",
-       "      <td>41092</td>\n",
-       "      <td>2901</td>\n",
+       "      <td>5139</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>874</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1300 rows × 3 columns</p>\n",
+       "<p>1300 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      ForecastID  Confirmed  Deaths\n",
-       "0              0     146566    2061\n",
-       "1              1       5895     287\n",
-       "2              2     229254    9102\n",
-       "3              3      70475    2034\n",
-       "4              4     820725   10683\n",
-       "...          ...        ...     ...\n",
-       "1295        1295    1273460   18529\n",
-       "1296        1296     673368    9501\n",
-       "1297        1297     184991    4817\n",
-       "1298        1298     864343   83370\n",
-       "1299        1299      41092    2901\n",
+       "      ForecastID  Confirmed  Deaths  Incident_Rate\n",
+       "0              0     127350      -1           2597\n",
+       "1              1       5318      -1            727\n",
+       "2              2     202197      -1           2777\n",
+       "3              3      61792      -1           2047\n",
+       "4              4     718534      -1           1818\n",
+       "...          ...        ...     ...            ...\n",
+       "1295        1295     145989      -1           1698\n",
+       "1296        1296      94794      -1           1243\n",
+       "1297        1297      14881      -1            814\n",
+       "1298        1298      99358      -1           1693\n",
+       "1299        1299       5139      -1            874\n",
        "\n",
-       "[1300 rows x 3 columns]"
+       "[1300 rows x 4 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
